# AdasFramework

./: .directory  README.md
InterimResultsSaver/: saveProgress.h
PyFramework/: SuperpixelAdjacency.py  calcStatistics.py  calcStatisticsFromCM.py  display_test_images.py  edge_features_one_slack_trainval_0.010000.pickle  listToDo.txt  prob_test.py  prob_train.py  temp_train_load.py  test_crf.py  test_unaries.py  test_unaries2.py  train_crf.py  train_crf_fromdata.py  train_crf_general.py  train_crf_general_data.py  train_unaries.py  train_unaries2.py
Results/: Results.pro  main.cpp  resultsManager.h
SuperpixelManager/: SuperpixelManager.pro  csuperpixel.h  main.cpp  slicsuperpixel.cpp  slicsuperpixel.h
builds/SuperpixelManager/: Makefile  SuperpixelManager
builds/SuperpixelMap/: Makefile  SuperpixelMap
collectData/: collectData.pro  main.cpp
core/Pipeline/: PipeCore.h  Pipeline.pro  cvccore.h  datamodules.h  main.bak  (+1 more)
dataInterop/: dataInterop.pro  datainterop.cpp  datainterop.h  datainterop_global.h
featureManager/: CMakeLists.txt  cFeatures.h  featureManager.pro  featuremanager.h  main.cpp
featureManager -threadBence/: build_run.sh  cFeatures.h  featuremanager.h  main.cpp
featureManager/cmake/: boost-python.cmake
fileModule/: fileModule.pro  filemodule.hpp  main.cpp
preProcesing/: main.cpp  preProcesing.pro  preprocessing.h
unaryClassifier/: main.cpp  unaryClassifier.pro  unaryclassifier.h
unaryClassifierOcv3/: main.cpp  unaryClassifierOcv3.pro
unaryPotential/: linear.cpp  linearClassifier.h  main.cpp  svm.cpp  svm.h  unaryPotential.pro
(+9 files in other folders)
